--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,13 +1,18 @@
-body {
-    font-family: sans-serif;
-    font-size: 30px;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-h1{
-    color: var(--primary);
-
+html {
+    font-size: 62.5%; /* 1rem = 10px */
 }
 
-.heading{ 
-    background-color: blue;
+body{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 
+    'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.6rem; /* 16px */
+    background: var(--gray-900);
+    color: var(--text-default);
 }
