--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,3 +16,16 @@ body{
     background: var(--gray-900);
     color: var(--text-default);
 }
+
+.container {
+    max-width: 980px;
+    margin: 0 auto;
+}
+
+.container-fluid {
+    max-width: 100%;
+}
+
+.content {
+    margin: 3.2rem;
+}
