--- a/src/components/Logo/style.module.css
+++ b/src/components/Logo/style.module.css
@@ -1,6 +1,8 @@
-.heading {
+.logo {
+     margin: 3.2rem 0; 
      display: flex; 
      align-items: center;
      justify-content: center;
      gap: 2.4rem;
+     background-color: red;
 }
