--- a/src/components/Logo/style.module.css
+++ b/src/components/Logo/style.module.css
@@ -4,5 +4,27 @@
      align-items: center;
      justify-content: center;
      gap: 2.4rem;
-     background-color: red;
+     padding-top: 3.2rem;
+}
+
+.logoLink {
+     display: flex;
+     align-items: center;
+     flex-direction: column;
+     justify-content: center;
+     gap: 0.4rem;
+     font-size: 4rem;
+     font-weight: bold;
+     text-decoration: none;
+     color: var(--primary);
+     transition: all 0.1s ease-in-out;
+}
+
+.logoLink:hover {
+     filter: brightness(50%);
+}
+
+.logoLink svg {
+     width: 6.4rem;
+     height: 6.4rem;
 }
